--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "nodemon app.js",
     "client-install": "npm install --prefix client",
     "postbuild": "NPM_CONFIG_PRODUCTON=false npm install --prefix client && npm run build --prefix client"
   },
