--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "shortid": "^2.2.15",
     "slugify": "^1.3.6"
   }
 }
